[package]
name = "rustybuzz-wasm"
version = "3.2.0"
authors = ["Your Name <you@example.com>"]
description = "Typesetting from NodeJS with text shaping, line wrapping, SVG text rendering"
license = "MIT/Apache-2.0"
repository = "https://github.com/loveencounterflow/rustybuzz-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
# acc to https://rustwasm.github.io/wasm-bindgen/reference/arbitrary-data-with-serde.html
# thx to https://stackoverflow.com/a/52819347/256361
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.32"
serde_derive = "1.0.80"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
rustybuzz = "0.3"
ttf-parser = "0.11"
svgtypes = "0.5"
# xmlwriter = "0.1" ### TAINT really needed?
textwrap = { version = "0.13", features = [ "smawk", "hyphenation", "unicode-width", ] }
hyphenation = "0.8"
regex ="*"
# flate2 = "1.0"

# [dev-dependencies]
pico-args = "0.3"
libc = "0.2"
hex = "0.4"
lazy_static = "1.4"
unicode-linebreak = "0.1"
